--- a/index.html
+++ b/index.html
@@ -3,8 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: {{projectTitle}}</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <header class="header">
+      <div class = "header-left">
+        <div class = "logo"></div>
+        <nav class = "main-navigation">
+          <ul class = "main-menu">
+            <li><a href = "#">Главная</a></li>
+            <li><a href = "#">О Седоне</a></li>
+            <li><a href = "#">Гостиницы</a></li>
+            <li><a href = "#">Гостиницы</a></li>
+            <li><a href = "#">Гостиницы</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class = "header-right">
+        <ul class = "user-menu">
+          <li class = "search-btn"></li>
+          <li class = "likes-btn"></li>
+        </ul>
+        <button class = "header-btn">Хочу сюда!</button>
+      </div>
+    </header>
 
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
