--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
   <body>
     <header class="header">
       <div class = "header-left">
-        <div class = "logo"></div>
+        <a href = "https://htmlacademy.ru/" class = "logo"></a>
         <nav class = "main-navigation">
           <ul class = "main-menu">
-            <li><a href = "#">Главная</a></li>
+            <li><a href = "/">Главная</a></li>
             <li><a href = "#">О Седоне</a></li>
-            <li><a href = "#">Гостиницы</a></li>
-            <li><a href = "#">Гостиницы</a></li>
             <li><a href = "#">Гостиницы</a></li>
           </ul>
         </nav>
@@ -22,12 +20,29 @@
 
       <div class = "header-right">
         <ul class = "user-menu">
-          <li class = "search-btn"></li>
-          <li class = "likes-btn"></li>
+          <li><a class = "search-btn" href = "#" ></a></li>
+          <li>
+            <a class = "likes-btn" href = "#" >
+              <span class = "likes-display">12</span>
+            </a>
+          </li>
         </ul>
         <button class = "header-btn">Хочу сюда!</button>
       </div>
     </header>
+
+    <main>
+      <section class = "welcome-screen">
+        <div class = "welcome-screen-banner">
+        </div>
+
+        <div class = "welcome-screen-slogan">
+        </div>
+
+        <div class = "welcome-screen-text">
+        </div>
+      </section>
+    </main>
 
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
