adding welcome screen2

--- a/index.html
+++ b/index.html
@@ -34,13 +34,16 @@
     <main>
       <section class = "welcome-screen">
         <div class = "welcome-screen-banner">
+          <img src = "./img/welcome.png" class = "welcome-screen-hero-text">
+          <img src = "./img/divider.png" class = "welcome-screen-devider">
         </div>
 
-        <div class = "welcome-screen-slogan">
-        </div>
 
-        <div class = "welcome-screen-text">
-        </div>
+          <h1 class = "welcome-screen-slogan">Седона — небольшой городок в Аризоне,
+            заслуживающий большего!</h1>
+
+
+        <p class = "welcome-screen-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
     </main>
 
