Added grid of advantages and content for 5 sections from 12

--- a/index.html
+++ b/index.html
@@ -45,6 +45,43 @@
 
         <p class = "welcome-screen-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
+
+
+      <section class = "advantages-grid">
+        <div class = "advantage-real-town">
+          <div class = "advantage-real-town-texts">
+            <h4>Настоящий городок</h4>
+            <span>— №1 —</span>
+            <p>Седона — не аттракцион для туристов, там течёт
+              своя жизнь</p>
+          </div>
+        </div>
+        <div class = "advantage-open-bange-img-container">
+          <img src = "./img/open_bange.jpg" alt="open bange image" class = "advantages-open-bange-img">
+        </div>
+        <div class = "advantage-homes">
+          <div class = "advantage-homes-content">
+            <img src = "./img/home_icon.svg">
+            <h5>Жильё</h5>
+            <p>Рекомендуем пожить в настоящем мотеле,
+              всё как в кино!</p>
+          </div>
+        </div>
+        <div class = "advantage-food">
+          <div class = "advantage-food-content">
+            <img src = "./img/food_icon.svg">
+            <h5>Еда</h5>
+            <p>Всегда заказывайте
+              топовый фирменный бургер, вы не разочаруетесь!</p>
+          </div>
+        </div>
+        <div class = "advantage-suvenires"></div>
+        <div class = "advantage-canion-img-container"></div>
+        <div class = "advantage-diablo-bridge"></div>
+        <div class = "advantages-compact-placing"></div>
+        <div class = "advantage-beautiful-road"></div>
+        <div class = "advantage-less-tourists"></div>
+      </section>
     </main>
 
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
