--- a/index.html
+++ b/index.html
@@ -75,12 +75,45 @@
               топовый фирменный бургер, вы не разочаруетесь!</p>
           </div>
         </div>
-        <div class = "advantage-suvenires"></div>
-        <div class = "advantage-canion-img-container"></div>
-        <div class = "advantage-diablo-bridge"></div>
-        <div class = "advantages-compact-placing"></div>
-        <div class = "advantage-beautiful-road"></div>
-        <div class = "advantage-less-tourists"></div>
+        <div class = "advantage-suvenires">
+          <div class = "advantage-suvenires-content">
+            <img src = "./img/suvenires_icon.svg">
+            <h5>Сувениры</h5>
+            <p>Не только китайского,
+              но и настоящего местного производства!</p>
+          </div>
+        </div>
+        <div class = "advantage-canion-img-container">
+          <img src = "./img/canion_photo.jpg" alt="" class = "advantage-canion-img">
+        </div>
+        <div class = "advantage-diablo-bridge">
+          <div class = "advantage-diablo-bridge-texts">
+            <h4>Там есть мост дьявола</h4>
+            <span>— №2 —</span>
+            <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          </div>
+        </div>
+        <div class = "advantages-compact-placing">
+          <div class = "advantages-compact-placing-texts">
+            <h4>Небольшая площадь</h4>
+            <span>— №3 —</span>
+            <p>Все достопримечательности находятся очень близко</p>
+          </div>
+        </div>
+        <div class = "advantage-beautiful-road">
+          <div class = "advantage-beautiful-road-texts">
+            <h4>Красивая дорога</h4>
+            <span>— №4 —</span>
+            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </div>
+        </div>
+        <div class = "advantage-less-tourists">
+          <div class = "advantage-less-tourists-texts">
+            <h4>Мало туристов</h4>
+            <span>— №5 —</span>
+            <p>Большинство едет в Гранд Каньон и толпится там</p>
+          </div>
+        </div>
       </section>
     </main>
 
