--- a/index.html
+++ b/index.html
@@ -115,6 +115,17 @@
           </div>
         </div>
       </section>
+
+
+      <section class = "hotel-search">
+        <div class = "hotel-search-content">
+          <h5>Заинтересовались?</h5>
+          <p>Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <button>ПОИСК ГОСТИНИЦЫ В седоне</button>
+        </div>
+
+
+      </section>
     </main>
 
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
