Added sticky footer

--- a/index.html
+++ b/index.html
@@ -123,12 +123,33 @@
           <p>Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <button>ПОИСК ГОСТИНИЦЫ В седоне</button>
         </div>
-
-
       </section>
+
+      <section class = "subscription">
+        <div class = "subscription-content">
+          <h5>Подпишитесь на рассылку</h5>
+          <p>Только полезная информация и никакого спама, <br> честное бойскаутское!</p>
+          <from action="" method="get" class = "subscription-form">
+            <input type = "email" placeholder="Ваш e-mail" class="subscription-input">
+            <button class = "subscription-button">Подписаться</button>
+          </form>
+        </div>
+      </section>
+
     </main>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+    <footer class = "footer">
+      <div class = "footer-network-icons">
+          <a href = "https://twitter.com/htmlacademy_ru" class = "twitter-icon"></a>
+          <a href = "https://www.facebook.com/htmlacademy" class = "facebook-icon"></a>
+          <a href = "https://www.youtube.com/c/HTMLAcademyRUS" class = "youtube-icon"></a>
+      </div>
+
+      <div class = "footer-telephone-num-big">+7 (812) 812-12-12</div>
+
+      <a href = "https://htmlacademy.ru/" class = "footer-logo"></a>
+
+    </footer>
 
   </body>
 </html>
