--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
         <a href = "https://htmlacademy.ru/" class = "logo"></a>
         <nav class = "main-navigation">
           <ul class = "main-menu">
-            <li><a href = "/">Главная</a></li>
+            <li><a href = "./index.html">Главная</a></li>
             <li><a href = "#">О Седоне</a></li>
-            <li><a href = "#">Гостиницы</a></li>
+            <li><a href = "./catalog/catalog.html">Гостиницы</a></li>
+            
           </ul>
         </nav>
       </div>
